Took out old 2014 stuff from left side, and expanded Hart's 150th bday in its place.

--- a/index.htm
+++ b/index.htm
@@ -201,49 +201,13 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                             width="313"></font></b></i></td>
                                 </tr>
                                 <tr>
-                                <td>
-                                <h4>Click below for highlights of the</h4>
-                                <h3 align="center">2014 Cowboy Festival Hart Park Events!</h3>
-                                <center>
-<a href="Event_Pages/cowboyfest2014/LorenJanes.jpg" rel="lightbox[cowboyfest]" 
-title="Stuntman Loren Janes makes a surprise appearance at the Walk of Western Stars tour!">
-<img src="Event_Pages/cowboyfest2014/thumbs/LorenJanes.jpg"/></a>
-<a href="Event_Pages/cowboyfest2014/MaltinAndRogers-Barnett.jpg" rel="lightbox[cowboyfest]" 
-title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl Rogers-Barnett">
-<img src="Event_Pages/cowboyfest2014/thumbs/MaltinAndRogers-Barnett.jpg"/></a>
-<a href="Event_Pages/cowboyfest2014/ChandlerAndGail.jpg" rel="lightbox[cowboyfest]" 
-title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl Rogers-Barnett">
-<img src="Event_Pages/cowboyfest2014/thumbs/ChandlerAndGail.jpg"/></a>
-                                </center>
-                                </td>
-                                </tr>
-                                <tr>
                                   <td style="vertical-align: top;">
-                                        <font color="#FFCC00" size="6">
-                                          <img
-                                            src="images/baseline_v2.gif"
-                                            border="0" height="24"
-                                            width="313"></font></b></i></td>
-                                </tr>
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                            <h4>Navigate to our friends at SCVTV to see pictures from 
-                                            <a href="https://www.facebook.com/media/set/?set=a.704375942973798.1073741860.227475607330503&type=1" target="_blank">
-                                            2014's Hart of the West Native American Pow Wow!
-                                            </a></h4>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                        <font color="#FFCC00" size="6">
-                                          <img
-                                            src="images/baseline_v2.gif"
-                                            border="0" height="24"
-                                            width="313"></font></b></i></td>
-                                </tr>
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                    <h4> Click <a target="_blank" href="https://www.facebook.com/media/set/?set=pcb.597304260399278&type=1">here</a> for photos from Bill Hart's 150<sup>th</sup> birthday bash and a "HARTy" WELCOME to all our new members!!</h4>
+                                    <h3> Click <a target="_blank" href="https://www.facebook.com/media/set/?set=pcb.597304260399278&type=1">here</a> for photos from Bill Hart's 150<sup>th</sup> birthday bash and a "HARTy" WELCOME to all our new members!!</h3>
+<div align="center">
+<a target="_blank" href="https://www.facebook.com/media/set/?set=pcb.597304260399278&type=1">
+<img align="center" src="images/bday.jpg"/>
+</a>
+</div>
                                   </td>
                                 </tr>
                                 <tr>
