--- a/index.html
+++ b/index.html
@@ -202,10 +202,28 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                 </tr>
                                 <tr>
                                   <td style="vertical-align: top;">
+                                    <h3> Click <a target="_blank" href="http://scvtv.com/?p=23452">here</a> for photos from the Pacific Islanders Festival 2015</h3>
+<div align="center">
+<a target="_blank" href="http://scvtv.com/?p=23452">
+<img align="center" src="images/pacific2015.jpg"/>
+</a>
+</div>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
                                     <h3> Click <a target="_blank" href="https://www.facebook.com/media/set/?set=pcb.597304260399278&type=1">here</a> for photos from Bill Hart's 150<sup>th</sup> birthday bash and a "HARTy" WELCOME to all our new members!!</h3>
 <div align="center">
 <a target="_blank" href="https://www.facebook.com/media/set/?set=pcb.597304260399278&type=1">
-<img align="center" src="images/bday.jpg"/>
+<img align="center" src="images/bday.png"/>
 </a>
 </div>
                                   </td>
@@ -288,7 +306,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                      Los Angeles Department of Parks and Recreation at Hart Park
                                      is pleased to present
                                     <h2>Peoples Fest 2015</h2>
-                                    <img src="images/peoples.jpg" />
+                                    <img src="images/peoples.png" />
                                     <h3>Saturday, June 20<sup>th</sup> 9am-4pm</h3>
                                     <p>Peoples Fest 2015 is a multi-cultural event, featuring ethnic and American 
                                     Foods, music performers, dances and arts &amp; crafts. Present will be 
