--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -68,7 +68,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                   <td width="50">&nbsp;</td>
                   <td width="896">
                     <div class="TTL" align="center">
-                      <p style="margin-top: 0"><b>21<sup>st</sup> Annual Hart of
+                      <p style="margin-top: 0"><b>22<sup>nd</sup> Annual Hart of
                             the West Pow Wow</b></p>
                     </div>
                   </td>
@@ -172,8 +172,8 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                               5px" align="center"> <h2 align="center"> 
 William S. Hart County Park &amp; Museum<br>
 along with The Friends of Hart Park<br>
-would like to thank you for coming to the<br></h2></p>
-                            <h2 align="center"> 21<sup>st</sup> Annual Hart of the West</h2>
+are proud to present the<br></h2></p>
+                            <h2 align="center"> 22<sup>nd</sup> Annual Hart of the West</h2>
                             <p align="center"> </p>
                             <p align="center"> </p>
                             <p align="center"> <img
@@ -189,16 +189,15 @@ would like to thank you for coming to the<br></h2></p>
                               </h2>
                     <hr>
 <p><h2 align="center">
-September 27<sup>th</sup> &mdash; 10am to 7pm <br>
-September 28<sup>th</sup> &mdash; 10am to 6pm
+September 26<sup>th</sup> &mdash; 10am to 7pm <br>
+September 27<sup>th</sup> &mdash; 10am to 6pm
 </h2><p>
 <h3 align="center">
-                                          <p>Princess Contest &mdash; ages 15 to 19</p>
+                                          <p>Princess Contest &mdash; ages 14 to 21</p>
                                           <p>All Drums &amp; Dancers Welcome!</p>
-<p>Honored Founders: Norm Phillips, Lina Schultz, Bill &ldquo;Standing Bear&rdquo; Kimmey</p>
 </h3>
                             <h2 id="PowWowNote" align="center"><b>
-                                    Vendors, for 2015, please contact Cindy Reeves 
+                                    Vendors, please contact Cindy Reeves 
                                     at the phone number shown below.</b><br>
 							</h2>
                         </tr>
@@ -249,7 +248,7 @@ September 28<sup>th</sup> &mdash; 10am to 6pm
                                                 Headman
                                           </td>
                                           <td id="PowWowPerson">
-                                                Casey Fox/Arikara
+                                                Eddie Greenflag/Paiute &amp; Shoshone
                                           </td>
                                         </tr>
                                         <tr>
@@ -257,7 +256,7 @@ September 28<sup>th</sup> &mdash; 10am to 6pm
                                                 Headwoman
                                           </td>
                                           <td id="PowWowPerson">
-                                                Jessica Whiteshield/Cheyenne
+                                                Sarita McGowen/Iowa Tribe of Kan-Neb
                                           </td>
                                         </tr>
                                         <tr>
@@ -266,7 +265,7 @@ September 28<sup>th</sup> &mdash; 10am to 6pm
                                               </p>
                                           </td>
                                           <td id="PowWowPerson">
-                                                Dakota Jacome/Kumeyaay
+                                                John Moose Mia / Fernandeno &amp; Chumash
 										  </td>
                                         </tr>
                                         <tr>
@@ -274,7 +273,7 @@ September 28<sup>th</sup> &mdash; 10am to 6pm
                                                 Headgirl
                                           </td>
                                           <td id="PowWowPerson">
-                                                Olivia Whiteshield/Cheyenne
+                                                Kaelene Ashmore/Din&eacute;
                                           </td>
                                         </tr>
                                         <tr>
@@ -298,7 +297,7 @@ September 28<sup>th</sup> &mdash; 10am to 6pm
                                                 Southern Host Drum
                                           </td>
                                           <td id="PowWowPerson">
-                                                Hale &amp; Company
+                                                Phil Hale &amp; Company
                                           </td>
                                         </tr>
                                       </tbody>
@@ -330,7 +329,7 @@ September 28<sup>th</sup> &mdash; 10am to 6pm
                                     <p style="margin-bottom: 1px"> <b
                                         class="EVNTC">When?</b></p>
                                     <p style="margin-top: 0"><b> <font
-                                          color="#800000" size="5">2014
+                                          color="#800000" size="5">2015
                                           Schedule</font></b></p>
                                     <ul>
                                       <li><font color="#006600"><font
@@ -382,7 +381,7 @@ September 28<sup>th</sup> &mdash; 10am to 6pm
                                         is with great pleasure that we
                                         invite you to experience a
                                         significant slice of Native
-                                        American culture at the 21<sup>st</sup>
+                                        American culture at the 22<sup>nd</sup>
                                         Annual Hart of the West Powwow.
                                         We hope you will come and enjoy
                                         the dancers, drummers and the
