--- a/index.htm
+++ b/index.htm
@@ -259,24 +259,16 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                               <div style="text-align: center;">
                                 <h2>2015 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
-                                <h4>(later dates subject to change)</h4>
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Saturday, June 20<sup>th</sup> 9am&mdash;4pm</td>
-                                      <td id="Event">
-                                      Peoples Fest 2015
-                                      </td>
-                                      <td id="EventDetail">
-                                      See details below.
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Saturday, Aug. 8<sup>th</sup></td>
                                       <td id="Event">
+                                      <a href="Event_Pages/silents.html">
                                       Silents Under the Stars
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
@@ -302,19 +294,21 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-                                     The Friends of Hart Park in cooperation with The County of 
-                                     Los Angeles Department of Parks and Recreation at Hart Park
-                                     is pleased to present
-                                    <h2>Peoples Fest 2015</h2>
-                                    <img src="images/peoples.png" />
-                                    <h3>Saturday, June 20<sup>th</sup> 9am-4pm</h3>
-                                    <p>Peoples Fest 2015 is a multi-cultural event, featuring ethnic and American 
-                                    Foods, music performers, dances and arts &amp; crafts. Present will be 
-                                    health and welfare information services.</p>
-                                    <p>There will be arts &amp; crafts vendors, food and snack vendors, 
-                                    amateur and professional performers. There will be a talent show which 
-                                    encourages kids to donate their talents to the Peoples Fest stage.</p>
-                                    <p>Admission to this event is free to the public.</p>
+                                    <p align="center">
+                                    <a href="Event_Pages/silents.html">
+                                    <h3>Get your tickets</a> to</h3>
+                                    <h2>Silents Under the Stars!</h2>
+                                    <h4>featuring this year's theme</h4>
+                                    <a href="Event_Pages/silents.html">
+                                    <img src="Event_Pages/silents/silents2015.png" />
+                                    </a>
+<br><small>above Hart image courtesy of the Seaver Center for Western History Research, 
+Los Angeles County Museum of Natural History.</small><br>
+<h2>Featuring the hilarious Buster Keaton Wm. S. Hart parody, &ldquo;Frozen North&rdquo;, plus the William S. Hart classic...</h2><br>
+<a href="Event_Pages/silents.html">
+<img src="Event_Pages/silents/BlueBlazesRawden.jpg" />
+</a>
+                                    </p>
 <!--
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
