Made Pow Wow a link.

--- a/index.htm
+++ b/index.htm
@@ -274,7 +274,9 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <tr>
                                       <td id="EventDate">Saturday &amp; Sunday, Sep. 26<sup>th</sup> &amp; 27<sup>th</sup></td>
                                       <td id="Event">
+                                      <a href="Event_Pages/powwow.html">
                                       Native American Pow Wow
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
