Added missing dates on calendar.

--- a/index.htm
+++ b/index.htm
@@ -291,6 +291,47 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       Wild West Rose Show
                                       </td>
                                     </tr>
+                                    <tr>
+                                      <td id="EventDate">Sunday, Nov. 8<sup>th</sup></td>
+                                      <td id="Event">
+                                      Rose Art Show
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday &amp; Sunday, Nov. 28<sup>th</sup> &amp; 29<sup>th</sup></td>
+                                      <td id="Event">
+                                      Hart Holiday Boutique &amp; Craft Show
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, Dec. 5<sup>th</sup></td>
+                                      <td id="Event">
+                                      Cowboys &amp; Carols
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate"></td>
+                                      <td id="Event">
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                      Jul. 31, Aug. 14, Aug. 28 at 7pm
+                                      </td>
+                                      <td id="Event">
+                                      Free Movie in the Park!<small>
+                                      For movie titles &amp; details, call (661) 259-0855</small>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                      Sep. 19, Dec. 12
+                                      </td>
+                                      <td id="Event">
+                                      Kid's Day at the Ranch!<small>
+                                      For location &amp; details, call (661) 254-4584</small>
+                                      </td>
+                                    </tr>
                                   </tbody>
                                 </table>
                                     <p style="margin-top: 7px;
