Made Silents "Sold Out".

--- a/index.htm
+++ b/index.htm
@@ -339,8 +339,9 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                                     <p align="center">
                                     <a href="Event_Pages/silents.html">
-                                    <h3>Get your tickets</a> to</h3>
                                     <h2>Silents Under the Stars!</h2>
+                                    </a>
+                                    <h1>Sold Out</h1>
                                     <h4>featuring this year's theme</h4>
                                     <a href="Event_Pages/silents.html">
                                     <img src="Event_Pages/silents/silents2015.png" />
