--- a/index.htm
+++ b/index.htm
@@ -264,10 +264,11 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Saturday, Aug. 8<sup>th</sup></td>
+                                      <td id="EventDate">Saturday, Aug. 29<sup>th</sup></td>
                                       <td id="Event">
-                                      <a href="Event_Pages/silents.html">
-                                      Silents Under the Stars
+                                      <a href="Event_Pages/DateNight2015.jpg" rel="lightbox[date]"
+                                        title="Enjoy an evening on the town, while your kids have fun with us!">
+                                      Date Night
                                       </a>
                                       </td>
                                     </tr>
@@ -338,20 +339,11 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                                     <p align="center">
-                                    <a href="Event_Pages/silents.html">
-                                    <h2>Silents Under the Stars!</h2>
+                                      <a href="Event_Pages/DateNight2015.jpg" rel="lightbox[date1]"
+                                        title="Enjoy an evening on the town, while your kids have fun with us!">
+                                        <h3>Enjoy an evening on the town, while your kids have fun with us!</h3>
+                                        <img src="Event_Pages/DateNight2015-sm.jpg" />
                                     </a>
-                                    <h1>Sold Out</h1>
-                                    <h4>featuring this year's theme</h4>
-                                    <a href="Event_Pages/silents.html">
-                                    <img src="Event_Pages/silents/silents2015.png" />
-                                    </a>
-<br><small>above Hart image courtesy of the Seaver Center for Western History Research, 
-Los Angeles County Museum of Natural History.</small><br>
-<h2>Featuring the hilarious Buster Keaton Wm. S. Hart parody, &ldquo;Frozen North&rdquo;, plus the William S. Hart classic...</h2><br>
-<a href="Event_Pages/silents.html">
-<img src="Event_Pages/silents/BlueBlazesRawden.jpg" />
-</a>
                                     </p>
 <!--
                                     <p style="margin-top: 7px;
