Slight reformatting on PowWow... added photos from Silents 2015.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -181,10 +181,10 @@ are proud to present the<br></h2></p>
                                 height="112" width="227"></p>
                             <p align="center"> </p>
                             <h2 align="center"> and Native American
-                              Craft Fair <br>
-                                            Navigate to our friends at SCVTV to see pictures from 
+                              Craft Fair.<br><br>
+                                            <h4 align="center">Navigate to our friends at SCVTV to see pictures from 
                                             <a href="https://www.facebook.com/media/set/?set=a.704375942973798.1073741860.227475607330503&type=1" target="_blank">
-                                            2014's Hart of the West Native American Pow Wow!
+                                            2014's Hart of the West Native American Pow Wow!</h4>
                                             </a>
                               </h2>
                     <hr>
