--- a/index.htm
+++ b/index.htm
@@ -202,10 +202,10 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                 </tr>
                                 <tr>
                                   <td style="vertical-align: top;">
-                                    <h3> Click <a target="_blank" href="http://scvtv.com/?p=23452">here</a> for photos from the Pacific Islanders Festival 2015</h3>
+                                    <h3> Click <a target="_blank" href="https://www.facebook.com/media/set/?set=a.930784956986448.1073741830.171859949545623&type=3">here</a> for photos from Silents Under the Stars 2015!</h3>
 <div align="center">
-<a target="_blank" href="http://scvtv.com/?p=23452">
-<img align="center" src="images/pacific2015.jpg"/>
+<a target="_blank" href="https://www.facebook.com/media/set/?set=a.930784956986448.1073741830.171859949545623&type=3">
+<img align="center" src="Event_Pages/silents/silents2015.jpg"/>
 </a>
 </div>
                                   </td>
