--- a/The_Friends/membership.html
+++ b/The_Friends/membership.html
@@ -112,7 +112,15 @@ function MM_swapImage() { //v3.0
 					<TD width="876" valign="top">
 						<p align="center"><b><i>
 					<h2>The Friends of Hart Park &amp; Museum</h2></i></b><br>
-<h3>Membership categories &amp; benefits</h3>
+<h4>
+<p>
+Please join The Friends of Hart Park!  We are people in your community who volunteer their time and talents to support the museum facilities.  For many years, funds raised by the Friends have been used to help maintain the mansion, help with the animals in the park, and clean/restore numerous art treasures.
+<p>
+<b>By joining at any level, you will receive our quarterly newsletter, and be kept up to date on our events! Additionally, you can anjoy the benefits outlined below if you join at the Sponsor level and above.</b>
+<p>
+All the proceeds from your membership go to supporting our ongoing efforts for the park, museum, artifacts and the animals. Thank you for your support!
+</h4>
+<h3>Membership categories &amp; additional benefits</h3>
 		<h4>
 		<TABLE border="0" cellpadding="0" cellspacing="10">
 			<TBODY>
