--- a/The_Friends/index.html
+++ b/The_Friends/index.html
@@ -112,7 +112,15 @@ function MM_swapImage() { //v3.0
 					<TD width="876" valign="top">
 						<p align="center"><b><i>
 					<h2>The Friends of Hart Park &amp; Museum</h2></i></b><br>
-<h3>Membership categories &amp; benefits</h3>
+<h4>
+<p>
+Please join The Friends of Hart Park!  We are people in your community who volunteer their time and talents to support the park and museum facilities.  For many years, funds raised by the Friends have been used to help maintain the mansion, help with the animals in the park, and clean/restore numerous art treasures.
+<p>
+<b>By joining at any level, you will receive our quarterly newsletter, and be kept up to date on our events! Additionally, you can anjoy the benefits outlined below if you join at the Sponsor level and above.</b>
+<p>
+All the proceeds from your membership go to supporting our ongoing efforts for the park, museum, artifacts and the animals. Thank you for your support!
+</h4>
+<h3>Membership categories &amp; additional benefits</h3>
 		<h4>
 		<TABLE border="0" cellpadding="0" cellspacing="10">
 			<TBODY>
@@ -191,15 +199,16 @@ function MM_swapImage() { //v3.0
 <input type="hidden" name="hosted_button_id" value="F7U4PL4HUPBSW">
 <table>
 <tr><td><input type="hidden" name="on0" value="Select the level of your new membership:">Select the level of your new membership:</td></tr><tr><td><select name="os0">
-	<option value="Individual">Individual $25.00 USD</option>
-	<option value="Family">Family $40.00 USD</option>
-	<option value="Sponsor">Sponsor $75.00 USD</option>
-	<option value="Patron">Patron $125.00 USD</option>
-	<option value="Silver">Silver $250.00 USD</option>
-	<option value="Gold">Gold $500.00 USD</option>
-	<option value="Diamond">Diamond $1,000.00 USD</option>
-	<option value="Corporate Benefactor">Corporate Benefactor $2,500.00 USD</option>
-	<option value="Volunteer (see Note)">Volunteer (see Note) $25.00 USD</option>
+    <option value="Individual">Individual $25.00 USD</option>
+    <option value="Family">Family $40.00 USD</option>
+    <option value="Sponsor">Sponsor $75.00 USD</option>
+    <option value="Patron">Patron $125.00 USD</option>
+    <option value="Silver">Silver $250.00 USD</option>
+    <option value="Gold">Gold $500.00 USD</option>
+    <option value="Diamond">Diamond $1,000.00 USD</option>
+    <option value="Corporate Benefactor">Corporate Benefactor $2,500.00 USD</option>
+    <option value="Volunteer (see Note)">Volunteer (see Note) $25.00 USD</option>
+    <option value="Senior/Student">Senior/Student $15.00 USD</option>
 </select> </td></tr>
 <tr><td><input type="hidden" name="on1" value="Phone Number:">Phone Number:</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
 </table>
@@ -207,6 +216,7 @@ function MM_swapImage() { //v3.0
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
+
 
 </p>
 					</TD>
