--- a/index.html
+++ b/index.html
@@ -240,18 +240,27 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                             <div><i><b> </b></i>
                               <div style="text-align: center;">
                                 <h2>2015 Calendar of Events</h2>
+                                <!--
                                 <h3>Click on links as details become available</h3>
+                                -->
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
+                                    <td><h4 align="center">Stay tuned for 2016 events!</h4></td>
+                                    </tr>
+                                    <tr>
+                                    <td><h3 align="center">And join in the fun by <a href="The_Friends/membership.html">
+                                    joining The Friends of Hart Park</a>!</h3></td>
+                                        <!--
                                       <td id="EventDate">Saturday, Dec. 5<sup>th</sup></td>
                                       <td id="Event">
                                       <a href="Event_Pages/CowboysCarols2015.png" rel="lightbox[carols]">
                                       Cowboys &amp; Carols
                                       </a>
                                       </td>
+                                      -->
                                     </tr>
                                   </tbody>
                                 </table>
@@ -259,17 +268,18 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                                     <p align="center">
-                                      <a href="Event_Pages/CowboysCarols2015.png" rel="lightbox[carols2]"
-                                        title="Cowboys & Carols">
-                                        <h3>Cowboys & Carols</h3>
-                                        <img src="Event_Pages/CowboysCarols2015-sm.png" />
-                                        </a>
+                                    <img src="images/HappyHolidays.png" />
                                     </p>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                                     <p align="center">
-                                    <img src="images/HappyHolidays.png" />
+                                      <a target="_blank" 
+                                      href="https://www.facebook.com/liliana.west/posts/10207378384489185"
+                                        title="Cowboys & Carols">
+                                        <h3>Click here to see pictures from 2015&rsquo;s</h3>
+                                        <img src="Event_Pages/CowboysCarols2015-sm.png" />
+                                        </a>
                                     </p>
                       </tbody>
                     </table>
