Fixed the winter hours, and also the weird formatting.

--- a/Mansion/museum.html
+++ b/Mansion/museum.html
@@ -31,8 +31,8 @@ The Spanish colonial Revival style mansion contains original furnishings, an imp
 In addition, there is a furnished 1910 ranch house which is open for unguided tours.<br><br>The surrounding park grounds are operated by the Los Angeles County Department of 
 Parks and Recreation. Picnic facilities are available in the park. There is a nature trail, a live farm animal exhibit, and a herd of bison occupies part of the range area of 
 this 260 acre "Horseshoe Ranch."<br><br>William S. Hart park is less than an hour's drive from most areas of Los Angeles. From mid-September to mid-June, <b>free tours</b> of the house 
-are available Wednesday through Friday, 10 am to 1 PM (last tour at 12:30) and Saturday and Sunday, 11 am to 4 PM (last tour at 3:30). In summer, tours are available Wednesday 
-through Sunday, 11 am to 4 PM (last tour at 3:30). Handicap accommodations are available.</P>
+are available Wednesday through Sunday, noon to 3pm (last tour at 2:30). In summer, tours are available Wednesday 
+through Sunday, 11am to 4pm (last tour at 3:30). Handicap accommodations are available.</P>
 			</TD>
 		</TR>
 	</TBODY>
