Started caledar of events for 2016, and updated Hart Hall page.

--- a/Hart_Hall/hart_hall.html
+++ b/Hart_Hall/hart_hall.html
@@ -114,11 +114,11 @@ function MM_swapImage() { //v3.0
 					<IMG height=225 src="../images/hall_1.jpg" width=300 border=0>
 					</P>
 					<P>A meeting hall has been built near the park entrance on 
-					Newhall Avenue that will hold almost 300 people for meetings and about 150 for sit down dinners. 
+					Newhall Avenue that will hold almost 200 people for meetings and about 120 for sit down dinners inside the Hall. 
 					The building was formerly a "pole barn" and is sometimes still affectionately referred to by that name -- the poles were incorporated as an architectural element and are still visible.</P>
 					<P>The Hart Hall can be rented for parties, meetings, weddings and community functions.  Fees include set up and clean up.  It includes a "caterer's kitchen," a public address system and an outside patio.</P>
-                    <P align="center"><B>For information, call&nbsp;
-                    661-259-0855</B></P>
+                    <P align="center"><B>For reservations and more information, call&nbsp;
+                    661-259-1750</B></P>
 					</TD>
 					<TD width="60">
 					&nbsp;
