--- a/index.html
+++ b/index.html
@@ -239,19 +239,58 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                           <td align="center" valign="top" width="557">
                             <div><i><b> </b></i>
                               <div style="text-align: center;">
-                                <h2>2015 Calendar of Events</h2>
+                                <h2>2016 Calendar of Events</h2>
                                 <!--
                                 <h3>Click on links as details become available</h3>
                                 -->
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
+                                    <tr>
                                   <tbody>
                                     <tr>
-                                    <td><h4 align="center">Stay tuned for 2016 events!</h4></td>
+                                      <td id="EventDate">Thursday&ndash;Sunday, Apr. 21-24</td>
+                                      <td id="Event">
+                                      <a target="_blank" href="http://cowboyfestival.org">
+                                      Cowboy Festival at Hart Park!</a> featuring these FOHP events:
+                                      </td>
                                     </tr>
                                     <tr>
-                                    <td><h3 align="center">And join in the fun by <a href="The_Friends/membership.html">
+                                      <td align="right" id="EventDate">
+                                      Friday,<br>Apr. 22<sup>nd</sup> 8pm</td>
+                                      <td id="Event">
+                                      <a target="_blank" href="http://cowboyfestival.org/venues/hart-mansion/">
+                                      Don Edwards&mdash;the Man &amp; his Music</a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td align="right" id="EventDate">
+                                      Saturday,<br>Apr. 23<sup>nd</sup> 8pm</td>
+                                      <td id="Event">
+                                      <a target="_blank" href="http://cowboyfestival.org/venues/hart-mansion/">
+                                      Wyatt Earp&mdash;the Life behind the Legend</a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, Aug. 18<sup>th</sup> (TBD)</td>
+                                      <td id="Event">
+                                      Silents Under the Stars!
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Sunday, Oct. 9<sup>th</sup> 11am&ndash;4pm</td>
+                                      <td id="Event">
+                                      <a target="_blank" href="http://www.bowwowsandmeows.org/">
+                                      Bow Wows &amp; Meows pet fair</a>
+                                      </td>
+                                    <tr>
+                                      <td id="EventDate">Saturday, Dec. 3<sup>rd</sup> (TBD)</td>
+                                      <td id="Event">
+                                      Cowboys &amp; Carols
+                                      </td>
+                                    </tr>
+                                    <td colspan="2">
+                                    <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
                                     joining The Friends of Hart Park</a>!</h3></td>
                                         <!--
                                       <td id="EventDate">Saturday, Dec. 5<sup>th</sup></td>
@@ -264,12 +303,6 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     </tr>
                                   </tbody>
                                 </table>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-                                    <p align="center">
-                                    <img src="images/HappyHolidays.png" />
-                                    </p>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
