--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Saturday, Aug. 18<sup>th</sup> (TBD)</td>
+                                      <td id="EventDate">Saturday, Aug. 13<sup>th</sup> (tentative)</td>
                                       <td id="Event">
                                       Silents Under the Stars!
                                       </td>
@@ -284,7 +284,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       Bow Wows &amp; Meows pet fair</a>
                                       </td>
                                     <tr>
-                                      <td id="EventDate">Saturday, Dec. 3<sup>rd</sup> (TBD)</td>
+                                      <td id="EventDate">Saturday, Dec. 3<sup>rd</sup> (tentative)</td>
                                       <td id="Event">
                                       Cowboys &amp; Carols
                                       </td>
